--- a/lio.html
+++ b/lio.html
@@ -149,7 +149,7 @@
 <body>
   <div class="container">
     <form class="form">
-      <h1>l or I, O or 0, what the hell is it?</h1>
+      <h1>l or I, O or 0, what is it?</h1>
       <p class="input-group">
         <!-- <label for="stringInput" class="form-label">Enter to find out</label> -->
         <input type="email" maxlength="64" value="" class="form-control" id="stringInput"
