--- a/lio.html
+++ b/lio.html
@@ -26,13 +26,12 @@
       line-height: 1.5;
       display: flex;
       flex-direction: column;
-      /* justify-content: center; */
-      align-items: center;
-      min-height: 60vh;
+      min-height: 100svh;
     }
 
     .container {
       width: 100%;
+      min-height: 25rem;
     }
 
     .form {
