--- a/index.html
+++ b/index.html
@@ -1,14 +1,146 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>INDEX</title>
+    <link rel="stylesheet" href="./assets/break-points.css">
+    <style type="text/css">
+    <!--
+      body {
+        padding: 0;
+        margin: 0;
+        background-color: #f1f1f1;
+      }
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100svh;
+        margin: 0 auto;
+      }
+      .the-list {
+        padding: 0;
+        margin: 1rem;
+        list-style: none;
+        display: flex;
+        flex-flow: row wrap;
+/*        align-items: stretch;*/
+        justify-content: center;
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="refresh" content="0; url=lio.html" />
-  <title>Redirecting...</title>
-</head>
+        & > * {
+          width: 100%;
+          max-width: 100%;
+          margin: 0;
+          padding: 1rem;
+          min-width: 12rem;
 
-<body>
-  <p>redirect to <a href="lio.html">li</a></p>
-</body>
+          .card {
+            height: 100%;
+            padding: 0 1rem;
+            background-color: #fff;
+            box-shadow: 1px 1px 8px 0px #ccc;
+            display: flex;
+            flex-direction: column;
+            border-radius: 0.25rem;
+            position: relative;
+            &.disabled {
+              opacity: 0.5;
+            }
 
+            .card-body {
+              padding: 1rem;
+              h4 {
+                margin: 0;
+                padding: 0.5rem 0;
+                flex-grow: 0;
+                font-size: 1.25rem;
+              }
+              p {
+                margin: 0 0 0.5rem;
+                padding: 0;
+                flex-grow: 0;
+                font-size: 0.75rem;
+                color: gray;
+              }
+              p:nth-child(1) {
+                flex-grow: 1;
+              }
+            }
+            a.card-link {
+              color: gray;
+              text-decoration: none;
+              text-indent: -200rem;
+              display: inline-block;
+              over-flow: hidden;
+              width: 1rem;
+              height: 1rem;
+
+              &::after {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                z-index: 1;
+                content: "";
+              }
+              &::before {
+                content: "";
+                width: 1rem;
+                height: 1rem;
+                vertical-align: middle;
+                position: absolute;
+                right: 1rem;
+                bottom: 1.5rem;
+                background-image: url(./assets/arrow-right-circle.svg);
+                opacity: 0.25;
+              }
+            }
+          }
+        }
+      }
+      @media (min-width: 768px) {
+        .the-list {
+          & > * {
+            flex: 1 0 0%;
+          }
+        }
+      }
+    -->
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <ul class="the-list">
+        <li>
+          <div class="card">
+            <div class="card-body">
+              <h4>0lio</h4>
+              <p>Identify letters like 0.O.I.l</p>
+              <p>分辨相似字符 <a href="./lio.html" class="card-link">go</a></p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <div class="card-body">
+              <h4>Check Pixels</h4>
+              <p>Detect LCD dead pixels</p>
+              <p>检测液晶显示器坏点 <a href="./checkpixels/" class="card-link">go</a></p>
+            </div>
+          </div>
+        </li>
+        <!-- <li>
+          <div class="card disabled">
+            <div class="card-body">
+              <h4>Coming Next</h4>
+              <p>It's a lie</p>
+              <p>忽悠誰呢 <a href="#" class="card-link">go</a></p>
+            </div>
+          </div>
+        </li> -->
+      </ul>
+    </div>
+  </body>
 </html>
