--- a/lio.html
+++ b/lio.html
@@ -26,6 +26,7 @@
       line-height: 1.5;
       display: flex;
       flex-direction: column;
+      align-items: center;
       min-height: 100svh;
     }
 
