--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
                 margin: 0;
                 padding: 0.5rem 0;
                 flex-grow: 0;
+                font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
                 font-size: 1.25rem;
               }
               p {
                 margin: 0 0 0.5rem;
                 padding: 0;
                 flex-grow: 0;
+                font-family: Arial, Helvetica, sans-serif;
                 font-size: 0.75rem;
                 color: gray;
               }
